--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PE'
 - !lcsh 'English language -- Orthography and spelling -- Early works to 1800'
+- GITenberg
 title: A Minniature ov Inglish Orthoggraphy
 url: http://www.gutenberg.org/ebooks/15901
